Changing header bg to white and trying to fix selected page on iphone x

--- a/css/jkl-tachyons.scss
+++ b/css/jkl-tachyons.scss
@@ -3068,7 +3068,7 @@ hr {
     padding-left: 4px;
   }
   .selected-on-page {
-    padding-bottom: 22px;
+    padding-bottom: 21px;
   }
 }
 
